# eventbus

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
src/: main.py  service.py
src/lib/: registry.py  utils.py
src/proto/: eventbus.proto
src/rpc/: eventbus_pb2.py  eventbus_pb2.pyi  eventbus_pb2_grpc.py  proto_dependency
